# hotspot-identification

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  NOTICE  README.md  baseline_metrics.json  environment-lock.yml  environment.yml  pmhc-hotspot-dev-plan.md  pyproject.toml
.cursor/: README.md  analyst.md  patcher.md  reviewer.md  trainer.md
.cursor/agents/: 00_shared_preamble.md  01_trainer.md  02_analyst.md  03_biology_reviewer.md  04_patcher.md  05_reviewer.md  analyst.md  biology-reviewer.md  commit-gate.md  design.md  docking.md  eval.md  feature.md  gatekeeper.md  ingest.md  model.md  orchestrator.md  overnight-orchestrator.md  patcher.md  reviewer.md  trainer.md
.cursor/skills/pmhc-pipeline/: SKILL.md
.github/workflows/: agent-loop.yml  benchmark.yml  ci.yml  overnight.yml  release.yml  train.yml
conda/: meta.yaml
configs/: baseline.yaml  dataset.yaml  design.yaml  docking.yaml  eval.yaml  features.yaml
data/: iedb_mhc_ligand.csv
data/failures/: analysis_summary.json
data/pdb/: eval_set_expanded.yaml  training_set.yaml
data/pmhc_hotspot_benchmark/: README.md  benchmark_split.yaml  leaderboard.md
docs/: AUTOMATION.md  DESIGN_PIPELINE_RUNBOOK.md  FULL_PIPELINE_RUNBOOK.md  NATURE_METHODS_RUNBOOK.md  PUBLISHING.md  design-conditioning-format.md  design-eval-schema.md  hotspot_schema.yaml
examples/: quickstart.py
experiments/: candidates_template.csv
paper/: main_text.md  results.md
paper/tables/: Table1_benchmark_results.txt
reports/: discussion.md  main_text.md  methods.md  results.md
reports/figures/: README.md
reports/tables/: TableSI_feature_importance.txt
results/: design_validation_report.md  wetlab_candidates.md
scripts/: agent_controller.py  apply_commit_gate.py  benchmark_once.py  biology_gate.py  compare_eval_benchmark.py  compare_metrics.py  eval_package_benchmark.py  fetch_iedb.py  generate_patch_brief.py  launch_design_cycle.py  launch_parallel_agents.py  overnight_loop_tick.sh  promote_champion.py  run_12h_overnight_loop.sh  run_cycle_once.sh  run_full_pipeline.py  run_nature_methods_pipeline.py  run_overnight_loop.sh  run_pipeline.py  stcrdab_to_manifest.py  train_once.py
src/pmhc_hotspot/: __init__.py  api.py  cli.py  constants.py  explain.py  export.py  hotspot_export.py  io.py  types.py  validation.py
src/pmhc_hotspot/automation/: __init__.py  biology_gate.py  cursor_agents.py  dataset_expansion.py  label_generator.py  metrics_gate.py  overnight.py  paths.py  pdb_crawler.py
src/pmhc_hotspot/benchmark/: __init__.py  contact_labels.py  dataset.py  evaluate.py  holdout.py  manifest.py  runner.py  stcrdab.py  tcr_pmhc_manifest.yaml
src/pmhc_hotspot/benchmarking/: __init__.py  dataset.py  metrics.py
src/pmhc_hotspot/data/: __init__.py  peptide_features.py  public_datasets.py  validation.py
src/pmhc_hotspot/design/: __init__.py  af2_scorer.py  config.py  control_strategies.py  docking_validation.py  export.py  failure_analysis.py  io.py  jobs.py  rfdiffusion_orchestrator.py  validation_metrics.py
src/pmhc_hotspot/docking/: __init__.py  config.py  prior.py
src/pmhc_hotspot/eval/: __init__.py  config.py  gatekeeper.py  leakage.py  ranking.py
src/pmhc_hotspot/features/: __init__.py  allele_rules.py  confidence.py  config.py  contacts.py  from_structure.py  geometry.py  mutation.py  positioning.py  sasa.py  spatial.py  surface.py
src/pmhc_hotspot/labels/: __init__.py
src/pmhc_hotspot/ml/: __init__.py  calibration.py  dataset.py  feature_matrix.py  fine_tune.py  gnn_analysis.py  gnn_dataset.py  gnn_features.py  gnn_model.py  gnn_train.py  gnn_uncertainty.py  hybrid.py  inference.py  (+7 more)
tests/: conftest.py  test_anchor_softening.py  test_automation.py  test_benchmark.py  test_calibration.py  test_cli.py  test_contact_labels.py  test_design_export.py  test_design_jobs.py  test_docking_prior.py  test_eval_live.py  test_eval_stub.py  test_export.py  test_feature_enrich.py  test_features.py  test_gnn.py  test_io.py  test_ml.py  test_ml_inference.py  test_overnight.py  test_patches.py  test_peptide_features.py  test_persistence.py  test_phase0.py  test_positioning.py  test_preprocess.py  test_public_ml.py  test_sasa.py  test_schema.py  test_scoring.py  test_selection.py  test_spatial.py  test_stcrdab.py  test_surface.py  test_validation.py
tests/data/: benchmark_mini.yaml  sample_atlas.csv  sample_atlas_native.csv  sample_iedb.csv  stcrdab_mini.tsv
(+25 files in other folders)
